feat: login screen UI + server code cleanup

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -300,7 +300,7 @@
   "admin.login.logoutRedirect": "Logout Redirect",
   "admin.login.logoutRedirectHint": "Optionally redirect the user to a specific page when he/she logouts. This can be overridden at the group level.",
   "admin.login.providers": "Login Providers",
-  "admin.login.providersVisbleWarning": "Note that you can always temporarily show all hidden providers by adding ?all to the url. This is useful to login as local admin while hiding it from normal users.",
+  "admin.login.providersVisbleWarning": "Note that you can always temporarily show all hidden providers by adding ?all=1 to the url. This is useful to login as local admin while hiding it from normal users.",
   "admin.login.subtitle": "Configure the login user experience of your wiki site",
   "admin.login.title": "Login",
   "admin.login.welcomeRedirect": "First-time Login Redirect",
@@ -671,7 +671,7 @@
   "admin.theme.bodyHtmlInjectionHint": "HTML code to be injected just before the closing body tag.",
   "admin.theme.codeInjection": "Code Injection",
   "admin.theme.cssOverride": "CSS Override",
-  "admin.theme.cssOverrideHint": "CSS code to inject after system default CSS. Consider using custom themes if you have a large amount of css code. Injecting too much CSS code will result in poor page load performance! CSS will automatically be minified.",
+  "admin.theme.cssOverrideHint": "CSS code to inject after system default CSS. Injecting too much CSS code can result in poor page load performance! CSS will automatically be minified.",
   "admin.theme.cssOverrideWarning": "{caution} When adding styles for page content, you must scope them to the {cssClass} class. Omitting this could break the layout of the editor!",
   "admin.theme.cssOverrideWarningCaution": "CAUTION:",
   "admin.theme.darkMode": "Dark Mode",
