feat: profile page to vue 3 composition + add fonts / width options to theme + site config preload

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -683,10 +683,10 @@
   "admin.theme.headHtmlInjection": "Head HTML Injection",
   "admin.theme.headHtmlInjectionHint": "HTML code to be injected just before the closing head tag. Usually for script tags.",
   "admin.theme.headerColor": "Header Color",
-  "admin.theme.headerColorHint": "The background color for the site top header.",
+  "admin.theme.headerColorHint": "The background color for the site top header. Does not apply to the administration area.",
   "admin.theme.iconset": "Icon Set",
   "admin.theme.iconsetHint": "Set of icons to use for the sidebar navigation.",
-  "admin.theme.layout": "Theme Layout",
+  "admin.theme.layout": "Layout",
   "admin.theme.options": "Theme Options",
   "admin.theme.primaryColor": "Primary Color",
   "admin.theme.primaryColorHint": "The main color for primary action buttons and most form elements.",
@@ -701,7 +701,7 @@
   "admin.theme.showSharingMenu": "Show Sharing Menu",
   "admin.theme.showSharingMenuHint": "Should the sharing menu be displayed on all pages.",
   "admin.theme.sidebarColor": "Sidebar Color",
-  "admin.theme.sidebarColorHint": "The background color for the side navigation menu on content pages.",
+  "admin.theme.sidebarColorHint": "The background color for the side navigation menu on content pages. Does not apply to the administration area.",
   "admin.theme.sidebarPosition": "Sidebar Position",
   "admin.theme.sidebarPositionHint": "On which side should the main site navigation sidebar be displayed.",
   "admin.theme.siteTheme": "Site Theme",
@@ -1429,5 +1429,13 @@
   "admin.general.footerExtraHint": "Optionally add more content to the footer, such as additional copyright terms or mandatory regulatory info.",
   "admin.general.urlHandling": "URL Handling",
   "admin.general.pageExtensions": "Page Extensions",
-  "admin.general.pageExtensionsHint": "A comma-separated list of URL extensions that will be treated as pages. For example, adding md will treat /foobar.md the same as /foobar."
+  "admin.general.pageExtensionsHint": "A comma-separated list of URL extensions that will be treated as pages. For example, adding md will treat /foobar.md the same as /foobar.",
+  "admin.theme.appearance": "Appearance",
+  "admin.theme.fonts": "Fonts",
+  "admin.theme.baseFont": "Base Font",
+  "admin.theme.baseFontHint": "The font used across the site for the interface.",
+  "admin.theme.contentFont": "Content Font",
+  "admin.theme.contentFontHint": "The font used specifically for page content.",
+  "admin.theme.contentWidth": "Content Width",
+  "admin.theme.contentWidthHint": "Should the content use all available viewport space or stay centered."
 }
