feat: admin api keys

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -24,7 +24,7 @@
   "admin.api.headerRevoke": "Revoke",
   "admin.api.newKeyButton": "New API Key",
   "admin.api.newKeyCopyWarn": "Copy the key shown below as {bold}",
-  "admin.api.newKeyCopyWarnBold": "it will NOT be shown again",
+  "admin.api.newKeyCopyWarnBold": "it will NOT be shown again.",
   "admin.api.newKeyExpiration": "Expiration",
   "admin.api.newKeyExpirationHint": "You can still revoke a key anytime regardless of the expiration.",
   "admin.api.newKeyFullAccess": "Full Access",
@@ -1449,5 +1449,22 @@
   "admin.auth.enabledHint": "Should this strategy be available to sites for login.",
   "admin.auth.vendor": "Vendor",
   "admin.auth.vendorWebsite": "Website",
-  "admin.auth.status": "Status"
+  "admin.auth.status": "Status",
+  "admin.system.checkingForUpdates": "Checking for Updates...",
+  "admin.system.upgrade": "Upgrade",
+  "admin.system.checkForUpdates": "Check",
+  "admin.system.checkUpdate": "Check / Upgrade",
+  "admin.api.none": "There are no API keys yet.",
+  "admin.api.groupsMissing": "You must select at least 1 group for this key.",
+  "admin.api.nameInvalidChars": "Key name has invalid characters.",
+  "admin.api.nameMissing": "Key name is missing.",
+  "admin.api.permissionGroups": "Group Permissions",
+  "admin.api.groupSelected": "Use {group} group permissions",
+  "admin.api.groupsSelected": "Use permissions from {count} groups",
+  "admin.api.createInvalidData": "Some fields are missing or have invalid data.",
+  "admin.api.copyKeyTitle": "Copy API Key",
+  "admin.api.key": "API Key",
+  "admin.api.createSuccess": "API Key created successfully.",
+  "admin.api.revoked": "Revoked",
+  "admin.api.revokedHint": "This key has been revoked and can no longer be used."
 }
