feat: login page + auth panel + various improvements

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -919,8 +919,9 @@
   "auth.actions.register": "Register",
   "auth.changePwd.instructions": "You must choose a new password:",
   "auth.changePwd.loading": "Changing password...",
-  "auth.changePwd.newPasswordPlaceholder": "New Password",
-  "auth.changePwd.newPasswordVerifyPlaceholder": "Verify New Password",
+  "auth.changePwd.currentPassword": "Current Password",
+  "auth.changePwd.newPassword": "New Password",
+  "auth.changePwd.newPasswordVerify": "Verify New Password",
   "auth.changePwd.proceed": "Change Password",
   "auth.changePwd.subtitle": "Choose a new password",
   "auth.enterCredentials": "Enter your credentials",
@@ -932,6 +933,20 @@
   "auth.errors.tooManyAttempts": "Too many attempts!",
   "auth.errors.tooManyAttemptsMsg": "You've made too many failed attempts in a short period of time, please try again {time}.",
   "auth.errors.userNotFound": "User not found",
+  "auth.errors.missingName": "Name is missing.",
+  "auth.errors.invalidName": "Name is invalid.",
+  "auth.errors.missingEmail": "Email is missing.",
+  "auth.errors.invalidEmail": "Email is invalid.",
+  "auth.errors.missingPassword": "Password is missing.",
+  "auth.errors.passwordTooShort": "Password is too short.",
+  "auth.errors.missingVerifyPassword": "Password Verification is missing.",
+  "auth.errors.passwordsNotMatch": "Passwords do not match.",
+  "auth.errors.missingUsername": "Username is missing.",
+  "auth.errors.register": "One or more fields are invalid.",
+  "auth.errors.login": "Missing or invalid login fields.",
+  "auth.errors.forgotPassword": "Missing or invalid email address.",
+  "auth.errors.tfaMissing": "Missing or incomplete security code.",
+  "auth.login.title": "Login",
   "auth.fields.email": "Email Address",
   "auth.fields.emailUser": "Email / Username",
   "auth.fields.name": "Name",
@@ -939,7 +954,7 @@
   "auth.fields.username": "Username",
   "auth.fields.verifyPassword": "Verify Password",
   "auth.forgotPasswordCancel": "Cancel",
-  "auth.forgotPasswordLink": "Forgot your password?",
+  "auth.forgotPasswordLink": "Forgot Password",
   "auth.forgotPasswordLoading": "Requesting password reset...",
   "auth.forgotPasswordSubtitle": "Enter your email address to receive the instructions to reset your password:",
   "auth.forgotPasswordSuccess": "Check your emails for password reset instructions!",
@@ -960,29 +975,17 @@
   "auth.passwordNotMatch": "Both passwords do not match.",
   "auth.passwordTooShort": "Password is too short.",
   "auth.pleaseWait": "Please wait",
-  "auth.providers.azure": "Azure Active Directory",
-  "auth.providers.facebook": "Facebook",
-  "auth.providers.github": "GitHub",
-  "auth.providers.google": "Google ID",
-  "auth.providers.ldap": "LDAP / Active Directory",
-  "auth.providers.local": "Local",
-  "auth.providers.slack": "Slack",
-  "auth.providers.windowslive": "Microsoft Account",
   "auth.registerCheckEmail": "Check your emails to activate your account.",
-  "auth.registerSubTitle": "Fill-in the form below to create your account.",
+  "auth.registerSubTitle": "Fill-in the form below to create an account.",
   "auth.registerSuccess": "Account created successfully!",
   "auth.registerTitle": "Create an account",
   "auth.registering": "Creating account...",
-  "auth.selectAuthProvider": "Select Authentication Provider",
+  "auth.selectAuthProvider": "Sign in with",
   "auth.sendResetPassword": "Reset Password",
   "auth.signingIn": "Signing In...",
-  "auth.switchToLogin.link": "Login instead",
-  "auth.switchToLogin.text": "Already have an account? {link}",
-  "auth.switchToRegister.link": "Create an account",
-  "auth.switchToRegister.text": "Don't have an account yet? {link}",
-  "auth.tfa.placeholder": "XXXXXX",
+  "auth.switchToLogin.link": "Back to Login",
+  "auth.switchToRegister.link": "Create an Account",
   "auth.tfa.subtitle": "Security code required:",
-  "auth.tfa.title": "Two Factor Authentication",
   "auth.tfa.verifyToken": "Verify",
   "auth.tfaFormTitle": "Enter the security code generated from your trusted device:",
   "auth.tfaSetupInstrFirst": "1) Scan the QR code below from your mobile 2FA application:",
@@ -1147,11 +1150,11 @@
   "common.pageSelector.pages": "Pages",
   "common.pageSelector.selectTitle": "Select a Page",
   "common.pageSelector.virtualFolders": "Virtual Folders",
+  "common.password.good": "Good",
   "common.password.average": "Average",
   "common.password.strong": "Strong",
-  "common.password.veryStrong": "Very Strong",
-  "common.password.veryWeak": "Very Weak",
   "common.password.weak": "Weak",
+  "common.password.poor": "Poor",
   "common.sidebar.browse": "Browse",
   "common.sidebar.currentDirectory": "Current Directory",
   "common.sidebar.mainMenu": "Main Menu",
