feat: welcome page - fix jwt auth

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1478,5 +1478,9 @@
   "common.error.generic.title": "Unexpected Error",
   "common.error.generic.hint": "Oops, something went wrong...",
   "common.error.notfound.title": "Not Found",
-  "common.error.notfound.hint": "That page doesn't exist or is not available."
+  "common.error.notfound.hint": "That page doesn't exist or is not available.",
+  "welcome.title": "Welcome to Wiki.js!",
+  "welcome.subtitle": "Let's get started...",
+  "welcome.createHome": "Create the homepage",
+  "welcome.admin": "Administration Area"
 }
