feat: upload site favicon

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -173,14 +173,14 @@
   "admin.general.displaySiteTitle": "Display Site Title",
   "admin.general.displaySiteTitleHint": "Should the site title be displayed next to the logo? If your logo isn't square and contain your brand name, turn this option off.",
   "admin.general.favicon": "Favicon",
-  "admin.general.faviconHint": "Favicon image file, in SVG, PNG, ICO or GIF format. Must be a square image.",
+  "admin.general.faviconHint": "Favicon image file, in SVG, PNG, JPG, WEBP or GIF format. Must be a square image.",
   "admin.general.faviconUploadSuccess": "Site Favicon uploaded successfully.",
   "admin.general.features": "Features",
   "admin.general.footerCopyright": "Footer / Copyright",
   "admin.general.general": "General",
   "admin.general.logo": "Logo",
   "admin.general.logoUpl": "Site Logo",
-  "admin.general.logoUplHint": "Logo image file, in SVG, PNG, JPG or GIF format.",
+  "admin.general.logoUplHint": "Logo image file, in SVG, PNG, JPG, WEBP or GIF format.",
   "admin.general.logoUploadSuccess": "Site logo uploaded successfully.",
   "admin.general.ratingsOff": "Off",
   "admin.general.ratingsStars": "Stars",
