feat: footer + data store fixes

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1185,9 +1185,10 @@
   "common.field.lastUpdated": "Last Updated",
   "common.field.name": "Name",
   "common.field.task": "Task",
-  "common.footer.copyright": "© {year} {company}. All rights reserved.",
-  "common.footer.license": "Content is available under the {license}, by {company}.",
-  "common.footer.poweredBy": "Powered by",
+  "common.footerGeneric": "Powered by {link}, an open source project.",
+  "common.footerPoweredBy": "Powered by {link}",
+  "common.footerCopyright": "© {year} {company}. All rights reserved.",
+  "common.footerLicense": "Content is available under the {license}, by {company}.",
   "common.header.account": "Account",
   "common.header.admin": "Administration",
   "common.header.assets": "Assets",
