feat: file manager (wip)

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -190,6 +190,8 @@
   "admin.general.defaultTimeFormatHint": "The default time format for new users.",
   "admin.general.defaultTimezone": "Default Timezone",
   "admin.general.defaultTimezoneHint": "The default timezone for new users.",
+  "admin.general.defaultTocDepth": "Default ToC Depth",
+  "admin.general.defaultTocDepthHint": "The default minimum and maximum header levels to show in the table of contents.",
   "admin.general.displaySiteTitle": "Display Site Title",
   "admin.general.displaySiteTitleHint": "Should the site title be displayed next to the logo? If your logo isn't square and contain your brand name, turn this option off.",
   "admin.general.favicon": "Favicon",
@@ -289,6 +291,8 @@
   "admin.groups.users": "Users",
   "admin.groups.usersCount": "0 user | 1 user | {count} users",
   "admin.groups.usersNone": "This group doesn't have any user yet.",
+  "admin.icons.subtitle": "Configure the icon packs available for use",
+  "admin.icons.title": "Icons",
   "admin.instances.activeConnections": "Active Connections",
   "admin.instances.activeListeners": "Active Listeners",
   "admin.instances.firstSeen": "First Seen",
@@ -1177,18 +1181,18 @@
   "common.error.title": "Error",
   "common.error.unauthorized.hint": "You don't have the required permissions to access this page.",
   "common.error.unauthorized.title": "Unauthorized",
+  "common.error.unexpected": "An unexpected error occurred.",
   "common.error.unknownsite.hint": "There's no wiki site at this host.",
   "common.error.unknownsite.title": "Unknown Site",
-  "common.error.unexpected": "An unexpected error occurred.",
   "common.field.createdOn": "Created On",
   "common.field.id": "ID",
   "common.field.lastUpdated": "Last Updated",
   "common.field.name": "Name",
   "common.field.task": "Task",
-  "common.footerGeneric": "Powered by {link}, an open source project.",
-  "common.footerPoweredBy": "Powered by {link}",
   "common.footerCopyright": "© {year} {company}. All rights reserved.",
+  "common.footerGeneric": "Powered by {link}, an open source project.",
   "common.footerLicense": "Content is available under the {license}, by {company}.",
+  "common.footerPoweredBy": "Powered by {link}",
   "common.header.account": "Account",
   "common.header.admin": "Administration",
   "common.header.assets": "Assets",
@@ -1423,6 +1427,7 @@
   "editor.props.dateRangeHint": "Select the start and end date for this page publication. The page will only be accessible to users with read access within the selected date range.",
   "editor.props.draft": "Draft",
   "editor.props.draftHint": "Visible to users with write access only.",
+  "editor.props.icon": "Icon",
   "editor.props.info": "Info",
   "editor.props.jsLoad": "Javascript - On Load",
   "editor.props.jsLoadHint": "Execute javascript once the page is loaded",
@@ -1465,6 +1470,7 @@
   "editor.unsaved.body": "You have unsaved changes. Are you sure you want to leave the editor and discard any modifications you made since the last save?",
   "editor.unsaved.title": "Discard Unsaved Changes?",
   "editor.unsavedWarning": "You have unsaved edits. Are you sure you want to leave the editor?",
+  "fileman.title": "File Manager",
   "history.restore.confirmButton": "Restore",
   "history.restore.confirmText": "Are you sure you want to restore this page content as it was on {date}? This version will be copied on top of the current history. As such, newer versions will still be preserved.",
   "history.restore.confirmTitle": "Restore page version?",
@@ -1476,6 +1482,18 @@
   "profile.appearanceHint": "Use the light or dark theme.",
   "profile.appearanceLight": "Light",
   "profile.auth": "Authentication",
+  "profile.authChangePassword": "Change Password",
+  "profile.authInfo": "Your account is associated with the following authentication methods:",
+  "profile.authLoadingFailed": "Failed to load authentication methods.",
+  "profile.authModifyTfa": "Modify 2FA",
+  "profile.authSetTfa": "Set 2FA",
+  "profile.avatar": "Avatar",
+  "profile.avatarClearFailed": "Failed to clear profile picture.",
+  "profile.avatarClearSuccess": "Profile picture cleared successfully.",
+  "profile.avatarUploadFailed": "Failed to upload user profile picture.",
+  "profile.avatarUploadHint": "For best results, use a 180x180 image of type JPG or PNG.",
+  "profile.avatarUploadSuccess": "Profile picture uploaded successfully.",
+  "profile.avatarUploadTitle": "Upload your user profile picture.",
   "profile.darkMode": "Dark Mode",
   "profile.darkModeHint": "Change the appareance of the site to a dark theme.",
   "profile.dateFormat": "Date Format",
@@ -1485,13 +1503,16 @@
   "profile.email": "Email Address",
   "profile.emailHint": "The email address used for login.",
   "profile.groups": "Groups",
+  "profile.groupsInfo": "You're currently part of the following groups:",
   "profile.groupsLoadingFailed": "Failed to load groups.",
+  "profile.groupsNone": "You're not part of any group.",
   "profile.jobTitle": "Job Title",
   "profile.jobTitleHint": "Your position in your organization; shown on your profile page.",
   "profile.localeDefault": "Locale Default",
   "profile.location": "Location",
   "profile.locationHint": "Your city and country; shown on your profile page.",
   "profile.myInfo": "My Info",
+  "profile.notifications": "Notifications",
   "profile.pages.emptyList": "No pages to display.",
   "profile.pages.headerCreatedAt": "Created",
   "profile.pages.headerPath": "Path",
@@ -1515,6 +1536,7 @@
   "profile.timezone": "Timezone",
   "profile.timezoneHint": "Set your timezone to display local time correctly.",
   "profile.title": "Profile",
+  "profile.uploadNewAvatar": "Upload New Image",
   "profile.viewPublicProfile": "View Public Profile",
   "tags.clearSelection": "Clear Selection",
   "tags.currentSelection": "Current Selection",
@@ -1536,24 +1558,5 @@
   "welcome.admin": "Administration Area",
   "welcome.createHome": "Create the homepage",
   "welcome.subtitle": "Let's get started...",
-  "welcome.title": "Welcome to Wiki.js!",
-  "profile.avatar": "Avatar",
-  "profile.uploadNewAvatar": "Upload New Image",
-  "profile.avatarUploadTitle": "Upload your user profile picture.",
-  "profile.avatarUploadHint": "For best results, use a 180x180 image of type JPG or PNG.",
-  "profile.groupsInfo": "You're currently part of the following groups:",
-  "profile.groupsNone": "You're not part of any group.",
-  "profile.authInfo": "Your account is associated with the following authentication methods:",
-  "profile.authSetTfa": "Set 2FA",
-  "profile.authModifyTfa": "Modify 2FA",
-  "profile.authChangePassword": "Change Password",
-  "profile.authLoadingFailed": "Failed to load authentication methods.",
-  "profile.notifications": "Notifications",
-  "profile.avatarUploadSuccess": "Profile picture uploaded successfully.",
-  "profile.avatarUploadFailed": "Failed to upload user profile picture.",
-  "profile.avatarClearSuccess": "Profile picture cleared successfully.",
-  "profile.avatarClearFailed": "Failed to clear profile picture.",
-  "admin.general.defaultTocDepth": "Default ToC Depth",
-  "admin.general.defaultTocDepthHint": "The default minimum and maximum header levels to show in the table of contents.",
-  "editor.props.icon": "Icon"
+  "welcome.title": "Welcome to Wiki.js!"
 }
