--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1558,5 +1558,9 @@
   "welcome.admin": "Administration Area",
   "welcome.createHome": "Create the homepage",
   "welcome.subtitle": "Let's get started...",
-  "welcome.title": "Welcome to Wiki.js!"
+  "welcome.title": "Welcome to Wiki.js!",
+  "admin.icons.warnLabel": "Enabling additional icon packs can significantly increase page load times!",
+  "admin.icons.warnHint": "Only activate the icon packs you actually use.",
+  "admin.icons.reference": "Reference",
+  "admin.icons.mandatory": "Used by the system and cannot be disabled."
 }
