feat: file manager folders

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -291,8 +291,12 @@
   "admin.groups.users": "Users",
   "admin.groups.usersCount": "0 user | 1 user | {count} users",
   "admin.groups.usersNone": "This group doesn't have any user yet.",
+  "admin.icons.mandatory": "Used by the system and cannot be disabled.",
+  "admin.icons.reference": "Reference",
   "admin.icons.subtitle": "Configure the icon packs available for use",
   "admin.icons.title": "Icons",
+  "admin.icons.warnHint": "Only activate the icon packs you actually use.",
+  "admin.icons.warnLabel": "Enabling additional icon packs can significantly increase page load times!",
   "admin.instances.activeConnections": "Active Connections",
   "admin.instances.activeListeners": "Active Listeners",
   "admin.instances.firstSeen": "First Seen",
@@ -1189,6 +1193,7 @@
   "common.field.lastUpdated": "Last Updated",
   "common.field.name": "Name",
   "common.field.task": "Task",
+  "common.field.title": "Title",
   "common.footerCopyright": "© {year} {company}. All rights reserved.",
   "common.footerGeneric": "Powered by {link}, an open source project.",
   "common.footerLicense": "Content is available under the {license}, by {company}.",
@@ -1470,7 +1475,30 @@
   "editor.unsaved.body": "You have unsaved changes. Are you sure you want to leave the editor and discard any modifications you made since the last save?",
   "editor.unsaved.title": "Discard Unsaved Changes?",
   "editor.unsavedWarning": "You have unsaved edits. Are you sure you want to leave the editor?",
+  "fileman.createFolderInvalidData": "One or more fields are invalid.",
+  "fileman.createFolderSuccess": "Folder created successfully.",
+  "fileman.detailsAssetSize": "File Size",
+  "fileman.detailsAssetType": "Type",
+  "fileman.detailsPageCreated": "Created",
+  "fileman.detailsPageEditor": "Editor",
+  "fileman.detailsPageType": "Type",
+  "fileman.detailsPageUpdated": "Last Updated",
+  "fileman.detailsTitle": "Title",
+  "fileman.folderChildrenCount": "Empty folder | 1 child | {count} children",
+  "fileman.folderCreate": "New Folder",
+  "fileman.folderFileName": "Path Name",
+  "fileman.folderFileNameHint": "URL friendly version of the folder name. Must consist of lowercase alphanumerical or hypen characters only.",
+  "fileman.folderFileNameInvalid": "Invalid Characters in Folder Path Name. Lowercase alphanumerical and hyphen characters only.",
+  "fileman.folderFileNameMissing": "Missing Folder Path Name",
+  "fileman.folderTitle": "Title",
+  "fileman.folderTitleInvalidChars": "Invalid Characters in Folder Name",
+  "fileman.folderTitleMissing": "Missing Folder Title",
+  "fileman.markdownPageType": "Markdown Page",
+  "fileman.pdfFileType": "PDF Document",
   "fileman.title": "File Manager",
+  "fileman.unknownFileType": "{type} file",
+  "fileman.uploadSuccess": "File(s) uploaded successfully.",
+  "fileman.viewOptions": "View Options",
   "history.restore.confirmButton": "Restore",
   "history.restore.confirmText": "Are you sure you want to restore this page content as it was on {date}? This version will be copied on top of the current history. As such, newer versions will still be preserved.",
   "history.restore.confirmTitle": "Restore page version?",
@@ -1558,9 +1586,5 @@
   "welcome.admin": "Administration Area",
   "welcome.createHome": "Create the homepage",
   "welcome.subtitle": "Let's get started...",
-  "welcome.title": "Welcome to Wiki.js!",
-  "admin.icons.warnLabel": "Enabling additional icon packs can significantly increase page load times!",
-  "admin.icons.warnHint": "Only activate the icon packs you actually use.",
-  "admin.icons.reference": "Reference",
-  "admin.icons.mandatory": "Used by the system and cannot be disabled."
+  "welcome.title": "Welcome to Wiki.js!"
 }
